--- a/CharacterVaulBack.csproj
+++ b/CharacterVaulBack.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="CSharpFunctionalExtensions" Version="3.4.3" />
         <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
