--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=dbCharacter;Username=postgres;Password=1234;"
+  },
+  "Jwt": {
+    "Key": "A!",
+    "Issuer": "CharacterVaultBack",
+    "Audience": "CharacterVaultFront"
   }
 }
