--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -9,7 +9,7 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=dbCharacter;Username=postgres;Password=1234;"
   },
   "Jwt": {
-    "Key": "A!",
+    "Key": "f4wFw9XjDpBbHkR9yVX5F6Q9dGf+p3gt",
     "Issuer": "CharacterVaultBack",
     "Audience": "CharacterVaultFront"
   }
